gerencia-admin-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerencia-admin
  labels:
    app: gerencia-admin
    service: gerencia-admin
spec:
  selector:
    app: gerencia-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerencia-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerencia-admin
      version: v1
  template:
    metadata:
      labels:
        app: gerencia-admin
        version: v1
    spec:
      containers:
      - name: gerencia-admin
        image: rdrigomachado/gerencia_admin:latest
        ports:
        - containerPort: 80
