gerencia-deploy-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerencia-v1
  labels:
    app: gerencia-v1
    service: gerencia-v1
spec:
  selector:
    app: gerencia-v1
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerencia-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerencia-v1
      version: v1
  template:
    metadata:
      labels:
        app: gerencia-v1
        version: v1
    spec:
      containers:
      - name: gerencia-v1
        image: rdrigomachado/gerencia:v1
        ports:
        - containerPort: 80
