gerencia-deploy-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerencia-v2
  labels:
    app: gerencia-v2
    service: gerencia-v2
spec:
  selector:
    app: gerencia-v2
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerencia-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerencia-v2
      version: v1
  template:
    metadata:
      labels:
        app: gerencia-v2
        version: v1
    spec:
      containers:
      - name: gerencia-v2
        image: rdrigomachado/gerencia:v2
        ports:
        - containerPort: 80
