gerencia-deploy-v3.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerencia-v3
  labels:
    app: gerencia-v3
    service: gerencia-v3
spec:
  selector:
    app: gerencia-v3
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerencia-v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gerencia-v3
      version: v1
  template:
    metadata:
      labels:
        app: gerencia-v3
        version: v1
    spec:
      containers:
      - name: gerencia-v3
        image: rdrigomachado/gerencia:latest
        ports:
        - containerPort: 80
