gerencia-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gerencia-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notebook-v3
spec:
  hosts:
    - "*"
  gateways:
    - gerencia-notebook
  http:
  - match:
    - uri:
        prefix: "/notebook"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: notebook
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gerencia-vs-v1
spec:
  hosts:
    - "*"
  gateways:
    - gerencia-gateway
  http:
  - match:
    - uri:
        prefix: "/v1"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: gerencia-v1
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gerencia-vs-v2
spec:
  hosts:
    - "*"
  gateways:
    - gerencia-gateway
  http:
  - match:
    - uri:
        prefix: "/v2"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: gerencia-v2
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gerencia-admin
spec:
  hosts:
    - "*"
  gateways:
    - gerencia-gateway
  http:
  - match:
    - uri:
        prefix: "/admin"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: gerencia-admin
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gerencia-v3-loadbalancer
spec:
  hosts:
    - "*"
  gateways:
    - gerencia-gateway
  http:
  - match:
    - uri:
        prefix: "/loadbalancer"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: gerencia-v3
        port:
          number: 80
