gerencia-authentication.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: gerencia
  namespace: default
spec:
  selector:
    matchLabels:
      app: gerencia
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
